--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -176,6 +176,8 @@ LastLogListing=PIE
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -203,8 +205,6 @@ RecentAssetEditors=AnimationEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 
 [RootWindow]
@@ -1323,9 +1323,9 @@ TextureEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
+RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=E:/Unreal engines/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [/Script/UnrealEd.PersonaOptions]
@@ -2975,7 +2975,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/_Core/_Player
+ContentBrowserDrawer.SelectedPaths=/Game/_Core/_Enemies/_Charger
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -3139,36 +3139,36 @@ Master_Key_C=
 SpotLightComponent=SkeletalMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,IF_Character_C.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.grasssounds,PropertyWrapper.DefaultValueCategory.Snowsounds,CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.DirtSounds,K2Node_VariableGet.DefaultValueCategory.grasssounds,Enemy_Main_C.Physics.ConstraintsGroup,Landscape.Collision.Collision
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_Core/_Weapons/AmmoToSpawn/BullitShot
-MRUItem1=/Game/_Core/_Player/_Widgets/_Widgets/WGP_IF_DropDownMenu
-MRUItem2=/Game/_Core/_Player/_INV_System/_Items/keys/key1
-MRUItem3=/Game/_Core/_Player/_INV_System/_Items/keys/Master_Key
-MRUItem4=/Game/_Core/_Player/_Widgets/_Widgets/WGP_IF_ItemMenu
-MRUItem5=/Game/_Core/_Player/_INV_System/Invetory
-MRUItem6=/Game/_SaveSystem/Bp_Save
-MRUItem7=/Game/_Core/_Player/IF_Character
-MRUItem8=/Game/_Core/_Player/_MainMenu/Boat
-MRUItem9=/Game/_Level/_LevelAssets/_OGFiles/snow_LayerInfo
-MRUItem10=/Game/_Level/_LevelAssets/_OGFiles/Dirty_Grass_LayerInfo
-MRUItem11=/Game/_Level/_physicalMaterials/PM_IF_Snow
-MRUItem12=/Game/_Level/_physicalMaterials/PM_IF_grass
-MRUItem13=/Game/_Core/_Player/_PlayerAnimations/_Notifires/Bp_FootstepsNoti
-MRUItem14=/Game/_Level/_LevelAssets/_OGFiles/Grass_LayerInfo
-MRUItem15=/Game/_Level/_LevelAssets/_OGFiles/Rock_LayerInfo
-MRUItem16=/Game/_Level/_LevelAssets/_OGFiles/Concrete_LayerInfo
-MRUItem17=/Game/_Level/_LevelAssets/_OGFiles/Sand_LayerInfo
-MRUItem18=/Game/_Level/_LevelAssets/_Environment_Assets/Pavement/pavement_stretch_M
-MRUItem19=/Game/_Core/_Player/_PlayerAnimations/_Animations/walk/Carpenter_Walk
-MRUItem20=/Game/_Core/_Player/_PlayerAnimations/_blendSpace/Capr_BS
-MRUItem21=/Game/_Core/_Weapons/Fireaxe/Fireaxe_SM
-MRUItem22=/Game/_Core/_Player/_PlayerAnimations/_Notifires/Bp_Knive
-MRUItem23=/Game/_Core/_Player/_PlayerAnimations/_Animations/Axe/Carpenter_Axe_Slash_Anim_Montage
-MRUItem24=/Game/_Core/_Weapons/AmmoToSpawn/BullitAr
-MRUItem25=/Game/_Core/_Weapons/AmmoToSpawn/BullitPist
-MRUItem26=/Game/_Core/_Enemies/Kronen_Male_001/BP_Kronen
-MRUItem27=/Game/_Core/_Enemies/Slugger_Enemy_001/TheSlugger_Animations_Death1
-MRUItem28=/Game/_Core/_Enemies/Slugger_Enemy_001/TheSlugger_Animations_Walk1
-MRUItem29=/Game/_Core/_Enemies/Slugger_Enemy_001/TheSlugger_Animations_Attack1
+MRUItem0=/Game/_Core/_Enemies/_Charger/Enemy_Charger_Death
+MRUItem1=/Game/_Core/_Enemies/_Charger/Enemy_Charger_Idle
+MRUItem2=/Game/_Core/_Weapons/AmmoToSpawn/BullitShot
+MRUItem3=/Game/_Core/_Player/_Widgets/_Widgets/WGP_IF_DropDownMenu
+MRUItem4=/Game/_Core/_Player/_INV_System/_Items/keys/key1
+MRUItem5=/Game/_Core/_Player/_INV_System/_Items/keys/Master_Key
+MRUItem6=/Game/_Core/_Player/_Widgets/_Widgets/WGP_IF_ItemMenu
+MRUItem7=/Game/_Core/_Player/_INV_System/Invetory
+MRUItem8=/Game/_SaveSystem/Bp_Save
+MRUItem9=/Game/_Core/_Player/IF_Character
+MRUItem10=/Game/_Core/_Player/_MainMenu/Boat
+MRUItem11=/Game/_Level/_LevelAssets/_OGFiles/snow_LayerInfo
+MRUItem12=/Game/_Level/_LevelAssets/_OGFiles/Dirty_Grass_LayerInfo
+MRUItem13=/Game/_Level/_physicalMaterials/PM_IF_Snow
+MRUItem14=/Game/_Level/_physicalMaterials/PM_IF_grass
+MRUItem15=/Game/_Core/_Player/_PlayerAnimations/_Notifires/Bp_FootstepsNoti
+MRUItem16=/Game/_Level/_LevelAssets/_OGFiles/Grass_LayerInfo
+MRUItem17=/Game/_Level/_LevelAssets/_OGFiles/Rock_LayerInfo
+MRUItem18=/Game/_Level/_LevelAssets/_OGFiles/Concrete_LayerInfo
+MRUItem19=/Game/_Level/_LevelAssets/_OGFiles/Sand_LayerInfo
+MRUItem20=/Game/_Level/_LevelAssets/_Environment_Assets/Pavement/pavement_stretch_M
+MRUItem21=/Game/_Core/_Player/_PlayerAnimations/_Animations/walk/Carpenter_Walk
+MRUItem22=/Game/_Core/_Player/_PlayerAnimations/_blendSpace/Capr_BS
+MRUItem23=/Game/_Core/_Weapons/Fireaxe/Fireaxe_SM
+MRUItem24=/Game/_Core/_Player/_PlayerAnimations/_Notifires/Bp_Knive
+MRUItem25=/Game/_Core/_Player/_PlayerAnimations/_Animations/Axe/Carpenter_Axe_Slash_Anim_Montage
+MRUItem26=/Game/_Core/_Weapons/AmmoToSpawn/BullitAr
+MRUItem27=/Game/_Core/_Weapons/AmmoToSpawn/BullitPist
+MRUItem28=/Game/_Core/_Enemies/Kronen_Male_001/BP_Kronen
+MRUItem29=/Game/_Core/_Enemies/Slugger_Enemy_001/TheSlugger_Animations_Death1
 
 [DetailCategoriesAdvanced]
 InputAction.Action=True
@@ -3334,6 +3334,8 @@ StaticMeshActor.Materials=True
 /Game/_SaveSystem/Bp_Save.Bp_Save=1
 /Game/_Core/_Player/_INV_System/Invetory.Invetory=1
 /Game/_Core/_Player/_Widgets/_Widgets/WGP_IF_DropDownMenu.WGP_IF_DropDownMenu=1
+/Game/_Core/_Enemies/_Charger/Enemy_Charger_Idle.Enemy_Charger_Idle=1
+/Game/_Core/_Enemies/_Charger/Enemy_Charger_Death.Enemy_Charger_Death=1
 
 [DetailPropertyExpansion]
 CapsuleComponent=
@@ -3341,7 +3343,7 @@ ShapeComponent=
 PrimitiveComponent=
 SceneComponent=
 ActorComponent=
-Object=
+Object="\"Object.SkeletalMeshes\" "
 IF_Character_C="\"Object.CharacterMovement\" "
 Character="\"Object.CharacterMovement\" "
 Pawn="\"Object.CharacterMovement\" "
