--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -169,13 +169,13 @@ RotGridEnabled=False
 SnapScaleEnabled=False
 
 [EditorStartup]
-LastLevel=/Game/_Level/TempMainMenu
+LastLevel=/Game/_Level/Island
 
 [MessageLog]
 LastLogListing=PIE
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=
 RecentAssetEditors=
@@ -207,9 +207,6 @@ RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
-OpenAssetsAtExit=/Game/_Level/_LevelAssets/_Environment_Assets/Pipe/RedPipe.RedPipe
-OpenAssetsAtExit=/Game/_Level/_LevelAssets/_DemoLevelAsset/RedGate.RedGate
-OpenAssetsAtExit=/Game/_Level/_LevelAssets/_Environment_Assets/Pipe/RedMetal_Texture.RedMetal_Texture
 
 [RootWindow]
 ScreenPosition=X=-545.500 Y=1160.000
@@ -3214,36 +3211,35 @@ woodBP_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collis
 RedGate_C=SkeletalMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,IF_Character_C.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.grasssounds,PropertyWrapper.DefaultValueCategory.Snowsounds,CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.DirtSounds,K2Node_VariableGet.DefaultValueCategory.grasssounds,Enemy_Main_C.Physics.ConstraintsGroup,Landscape.Collision.Collision
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_Level/TempMainMenu
-MRUItem1=/Game/_Level/DemoMap
-MRUItem2=/Game/_Level/Island
-MRUItem3=/Game/_Level/_LevelAssets/_Environment_Assets/Pipe/RedMetal_Texture
-MRUItem4=/Game/_Level/_LevelAssets/_Environment_Assets/Pipe/RedPipe
-MRUItem5=/Game/_Level/_LevelAssets/_DemoLevelAsset/RedGate
-MRUItem6=/Game/_Core/_Player/_INV_System/_Items/keys/key1_2
-MRUItem7=/Game/_Core/_Enemies/_Charger/Enemy_Charger_Death
-MRUItem8=/Game/_Core/_Enemies/_Charger/Enemy_Charger_Idle
-MRUItem9=/Game/_Core/_Weapons/AmmoToSpawn/BullitShot
-MRUItem10=/Game/_Core/_Player/_Widgets/_Widgets/WGP_IF_DropDownMenu
-MRUItem11=/Game/_Core/_Player/_INV_System/_Items/keys/key1
-MRUItem12=/Game/_Core/_Player/_INV_System/_Items/keys/Master_Key
-MRUItem13=/Game/_Core/_Player/_Widgets/_Widgets/WGP_IF_ItemMenu
-MRUItem14=/Game/_Core/_Player/_INV_System/Invetory
-MRUItem15=/Game/_SaveSystem/Bp_Save
-MRUItem16=/Game/_Core/_Player/IF_Character
-MRUItem17=/Game/_Core/_Player/_MainMenu/Boat
-MRUItem18=/Game/_Level/_LevelAssets/_OGFiles/snow_LayerInfo
-MRUItem19=/Game/_Level/_LevelAssets/_OGFiles/Dirty_Grass_LayerInfo
-MRUItem20=/Game/_Level/_physicalMaterials/PM_IF_Snow
-MRUItem21=/Game/_Level/_physicalMaterials/PM_IF_grass
-MRUItem22=/Game/_Core/_Player/_PlayerAnimations/_Notifires/Bp_FootstepsNoti
-MRUItem23=/Game/_Level/_LevelAssets/_OGFiles/Grass_LayerInfo
-MRUItem24=/Game/_Level/_LevelAssets/_OGFiles/Rock_LayerInfo
-MRUItem25=/Game/_Level/_LevelAssets/_OGFiles/Concrete_LayerInfo
-MRUItem26=/Game/_Level/_LevelAssets/_OGFiles/Sand_LayerInfo
-MRUItem27=/Game/_Level/_LevelAssets/_Environment_Assets/Pavement/pavement_stretch_M
-MRUItem28=/Game/_Core/_Player/_PlayerAnimations/_Animations/walk/Carpenter_Walk
-MRUItem29=/Game/_Core/_Player/_PlayerAnimations/_blendSpace/Capr_BS
+MRUItem0=/Game/_Level/DemoMap
+MRUItem1=/Game/_Level/Island
+MRUItem2=/Game/_Level/_LevelAssets/_Environment_Assets/Pipe/RedMetal_Texture
+MRUItem3=/Game/_Level/_LevelAssets/_Environment_Assets/Pipe/RedPipe
+MRUItem4=/Game/_Level/_LevelAssets/_DemoLevelAsset/RedGate
+MRUItem5=/Game/_Core/_Player/_INV_System/_Items/keys/key1_2
+MRUItem6=/Game/_Core/_Enemies/_Charger/Enemy_Charger_Death
+MRUItem7=/Game/_Core/_Enemies/_Charger/Enemy_Charger_Idle
+MRUItem8=/Game/_Core/_Weapons/AmmoToSpawn/BullitShot
+MRUItem9=/Game/_Core/_Player/_Widgets/_Widgets/WGP_IF_DropDownMenu
+MRUItem10=/Game/_Core/_Player/_INV_System/_Items/keys/key1
+MRUItem11=/Game/_Core/_Player/_INV_System/_Items/keys/Master_Key
+MRUItem12=/Game/_Core/_Player/_Widgets/_Widgets/WGP_IF_ItemMenu
+MRUItem13=/Game/_Core/_Player/_INV_System/Invetory
+MRUItem14=/Game/_SaveSystem/Bp_Save
+MRUItem15=/Game/_Core/_Player/IF_Character
+MRUItem16=/Game/_Core/_Player/_MainMenu/Boat
+MRUItem17=/Game/_Level/_LevelAssets/_OGFiles/snow_LayerInfo
+MRUItem18=/Game/_Level/_LevelAssets/_OGFiles/Dirty_Grass_LayerInfo
+MRUItem19=/Game/_Level/_physicalMaterials/PM_IF_Snow
+MRUItem20=/Game/_Level/_physicalMaterials/PM_IF_grass
+MRUItem21=/Game/_Core/_Player/_PlayerAnimations/_Notifires/Bp_FootstepsNoti
+MRUItem22=/Game/_Level/_LevelAssets/_OGFiles/Grass_LayerInfo
+MRUItem23=/Game/_Level/_LevelAssets/_OGFiles/Rock_LayerInfo
+MRUItem24=/Game/_Level/_LevelAssets/_OGFiles/Concrete_LayerInfo
+MRUItem25=/Game/_Level/_LevelAssets/_OGFiles/Sand_LayerInfo
+MRUItem26=/Game/_Level/_LevelAssets/_Environment_Assets/Pavement/pavement_stretch_M
+MRUItem27=/Game/_Core/_Player/_PlayerAnimations/_Animations/walk/Carpenter_Walk
+MRUItem28=/Game/_Core/_Player/_PlayerAnimations/_blendSpace/Capr_BS
 
 [DetailCategoriesAdvanced]
 InputAction.Action=True
@@ -3881,6 +3877,10 @@ TakeRecorderProjectSettings=True
 HardwareTargetingSettings=True
 
 [PluginBrowser]
+InstalledPlugins=AsyncLevelLoad
+InstalledPlugins=AsyncLoadingScreen
+InstalledPlugins=MetaHuman
+InstalledPlugins=EOSIntegrationKit
 InstalledPlugins=WMFCodecs
 
 [LandscapeEdit]
