--- a/DeepInfection/DeepInfection.uproject
+++ b/DeepInfection/DeepInfection.uproject
@@ -22,6 +22,10 @@
 		{
 			"Name": "SkeletalMeshModelingTools",
 			"Enabled": true
+		},
+		{
+			"Name": "NiagaraFluids",
+			"Enabled": true
 		}
 	]
 }
