--- a/DeepInfection/DeepInfection.uproject
+++ b/DeepInfection/DeepInfection.uproject
@@ -26,6 +26,10 @@
 		{
 			"Name": "NiagaraFluids",
 			"Enabled": true
+		},
+		{
+			"Name": "RawInput",
+			"Enabled": true
 		}
 	],
 	"TargetPlatforms": [
