--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -177,6 +177,9 @@ LastLevel=/Game/_Level/Island
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=SkeletonEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=LevelSequenceEditor
@@ -204,10 +207,6 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-OpenAssetsAtExit=/Game/_Core/_Player/_PlayerAnimations/_Animations/Axe/Axe_Slash.Axe_Slash
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -858,7 +857,7 @@ ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
 ContentBrowserDrawer.SelectedPaths=/Game/_Core/_Enemies/Kronen_Male_001
-ContentBrowserDrawer.SelectedPaths=/Game/_Core/_Player/_PlayerAnimations/_Animations/Axe
+ContentBrowserDrawer.SelectedPaths=/Game/_Core/_Weapons/AR_rifle
 None=======
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
@@ -908,7 +907,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/_Level/_LevelAssets/_Props/_Outside
+ContentBrowserTab1.SelectedPaths=/Game/_Core/_Weapons/AR_rifle
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
@@ -2177,6 +2176,11 @@ None=======
 /Game/_Core/_Player/_PlayerAnimations/_Animations/Axe/Carpenter_Axe_Idle_Anim.Carpenter_Axe_Idle_Anim=1
 /Game/_Core/_Player/_PlayerAnimations/_Animations/Axe/Carpenter_Axe_Slash_AnimOld.Carpenter_Axe_Slash_AnimOld=1
 /Game/_Core/_Player/_PlayerAnimations/_Animations/Axe/Carpenter_Axe_Slash_Anim.Carpenter_Axe_Slash_Anim=1
+/Game/_Core/_Weapons/AR_rifle/Weapon_Rifle_Rifle.Weapon_Rifle_Rifle=1
+/Game/_Core/_Weapons/AR_rifle/Weapon_Rifle_Rifle_Mag.Weapon_Rifle_Rifle_Mag=1
+/Game/_Core/_Weapons/AR_rifle/Weapon_Rifle_SkeletonOld.Weapon_Rifle_SkeletonOld=1
+/Game/_Core/_Weapons/AR_rifle/Weapon_Rifle_Mag.Weapon_Rifle_Mag=1
+/Game/_Core/_Weapons/AR_rifle/Weapon_Rifle.Weapon_Rifle=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2291,7 +2295,7 @@ SkeletonEditingProperties=SkeletonEditingProperties.Details.Transform
 [DetailPropertyExpansion]
 RawInputSettings="\"Object.Device Configurations.DeviceConfigurations\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties.AxisProperties[7]\" "
 DeveloperSettings=
-Object="\"Object.SkeletalMeshes\" "
+Object=
 InputMappingContext="\"Object.Mappings.Mappings.Mappings[10]\" \"Object.Mappings.Mappings.Mappings[13]\" \"Object.Mappings.Mappings.Mappings[16]\" \"Object.Mappings.Mappings.Mappings[17]\" \"Object.Mappings.Mappings.Mappings[18]\" \"Object.Mappings.Mappings.Mappings[19]\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
@@ -2302,36 +2306,36 @@ ClothingAssetCommon="\"Object.Config.ClothConfigs\" \"Object.Config.ClothConfigs
 ClothingAssetBase="\"Object.Config.ClothConfigs\" \"Object.Config.ClothConfigs.ClothConfigs[1]\" \"Object.Config.ClothConfigs.ClothConfigs[1].Object.Simulation\" "
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_Core/_Player/_PlayerAnimations/_Animations/Axe/Carpenter_Axe_Slash_Anim
-MRUItem1=/Game/_Core/_Player/_PlayerAnimations/_Animations/Axe/Carpenter_Axe_Slash_AnimOld
-MRUItem2=/Game/_Core/_Player/_PlayerAnimations/_Animations/Axe/Axe_Slash
-MRUItem3=/Game/_Core/_Player/_PlayerAnimations/_Animations/Axe/Carpenter_Axe_Idle_Anim
-MRUItem4=/Game/_Core/_Player/_PlayerAnimations/_Animations/Axe/Carpenter_Axe_Idle_AnimOld
-MRUItem5=/Game/_Core/_Player/_PlayerAnimations/_Animations/Axe/Axe_Idle
-MRUItem6=/Game/_Core/_Player/_Assets/Carpenter_Char_SM
-MRUItem7=/Game/_Level/_LevelAssets/_Props/Cloth/Cloth_001
-MRUItem8=/Game/_Level/_LevelAssets/_Props/_Materials/Playground_2
-MRUItem9=/Game/_Level/_LevelAssets/_Props/_Outside/Playground_SM
-MRUItem10=/Game/_Level/_LevelAssets/_Props/Cloth/Cloth_001_Material
-MRUItem11=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_BigGun_Idle_Anim
-MRUItem12=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Pistol_Shoot_Anim
-MRUItem13=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Pistol_Shoot
-MRUItem14=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Pistol_Aim_Anim
-MRUItem15=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Pistol_Aim
-MRUItem16=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Pistol_Idle_Anim
-MRUItem17=/Game/_Core/_Player/_Assets/Carpenter_Char_Skeleton
-MRUItem18=/Game/_Core/_Player/_PlayerAnimations/_Animations/IDL/Carpenter_Idle
-MRUItem19=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Pistol_Idle
-MRUItem20=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_BigGun_Aim_Anim
-MRUItem21=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Rifle_Aim
-MRUItem22=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_BigGun_Shoot_Anim
-MRUItem23=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Rifle_Shoot
-MRUItem24=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Rifle_Idle
-MRUItem25=/Game/_Core/_Player/_PlayerAnimations/_Animations/IDL/Carpenter_Idle_Anim
-MRUItem26=/Game/_Core/_Enemies/_Charger/Enemy_Charger_Death
-MRUItem27=/Game/_Core/_Player/_PlayerAnimations/_Animations/Hurt/Carpenter_KnockedOver
-MRUItem28=/Game/_Core/_Weapons/Sig_Sauer/SigSauer_Sights_SM
-MRUItem29=/Game/_Core/_Weapons/Sig_Sauer/SigSauer_Mag_SM
+MRUItem0=/Game/_Core/_Weapons/AR_rifle/Weapon_Rifle
+MRUItem1=/Game/_Core/_Weapons/AR_rifle/Weapon_Rifle_Mag
+MRUItem2=/Game/_Core/_Weapons/AR_rifle/Weapon_Rifle_SkeletonOld
+MRUItem3=/Game/_Core/_Player/_PlayerAnimations/_Animations/Axe/Carpenter_Axe_Slash_Anim
+MRUItem4=/Game/_Core/_Player/_PlayerAnimations/_Animations/Axe/Carpenter_Axe_Slash_AnimOld
+MRUItem5=/Game/_Core/_Player/_PlayerAnimations/_Animations/Axe/Axe_Slash
+MRUItem6=/Game/_Core/_Player/_PlayerAnimations/_Animations/Axe/Carpenter_Axe_Idle_Anim
+MRUItem7=/Game/_Core/_Player/_PlayerAnimations/_Animations/Axe/Carpenter_Axe_Idle_AnimOld
+MRUItem8=/Game/_Core/_Player/_PlayerAnimations/_Animations/Axe/Axe_Idle
+MRUItem9=/Game/_Core/_Player/_Assets/Carpenter_Char_SM
+MRUItem10=/Game/_Level/_LevelAssets/_Props/Cloth/Cloth_001
+MRUItem11=/Game/_Level/_LevelAssets/_Props/_Materials/Playground_2
+MRUItem12=/Game/_Level/_LevelAssets/_Props/_Outside/Playground_SM
+MRUItem13=/Game/_Level/_LevelAssets/_Props/Cloth/Cloth_001_Material
+MRUItem14=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_BigGun_Idle_Anim
+MRUItem15=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Pistol_Shoot_Anim
+MRUItem16=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Pistol_Shoot
+MRUItem17=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Pistol_Aim_Anim
+MRUItem18=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Pistol_Aim
+MRUItem19=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Pistol_Idle_Anim
+MRUItem20=/Game/_Core/_Player/_Assets/Carpenter_Char_Skeleton
+MRUItem21=/Game/_Core/_Player/_PlayerAnimations/_Animations/IDL/Carpenter_Idle
+MRUItem22=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Pistol_Idle
+MRUItem23=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_BigGun_Aim_Anim
+MRUItem24=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Rifle_Aim
+MRUItem25=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_BigGun_Shoot_Anim
+MRUItem26=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Rifle_Shoot
+MRUItem27=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Rifle_Idle
+MRUItem28=/Game/_Core/_Player/_PlayerAnimations/_Animations/IDL/Carpenter_Idle_Anim
+MRUItem29=/Game/_Core/_Enemies/_Charger/Enemy_Charger_Death
 
 [MessageLog]
 LastLogListing=FBXImport
