--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -175,9 +175,15 @@ MRUItem1=/Game/_Level/DemoMap
 LastLevel=/Game/_Level/Island
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
-RecentAssetEditors=MaterialEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=AnimationBlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=AnimationBlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=AnimationEditor
@@ -201,12 +207,6 @@ RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=MaterialEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=
-RecentAssetEditors=AnimationEditor
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -849,6 +849,162 @@ Texture2D.Texture=True
 Texture2D.Adjustments=True
 Texture2D.File Path=True
 Texture2D.Compositing=True
+Carp_AnimBP_C.Default=True
+Carp_AnimBP_C.RootMotion=True
+Carp_AnimBP_C.Notifies=True
+Carp_AnimBP_C.Montage=True
+AnimStateNode.GraphNodeDetail=True
+AnimStateNode.Animation State=True
+AnimStateTransitionNode.Transition=True
+AnimStateTransitionNode.BlendSettings=True
+AnimStateTransitionNode.Events=True
+AnimStateTransitionNode.Notifications=True
+AnimGraphNode_TransitionResult.Result=True
+AnimGraphNode_TransitionResult.Functions=True
+AnimGraphNode_TransitionResult.Tag=True
+AnimGraphNode_SequencePlayer.Sync=True
+AnimGraphNode_SequencePlayer.Relevancy=True
+AnimGraphNode_SequencePlayer.Functions=True
+AnimGraphNode_SequencePlayer.Settings=True
+AnimGraphNode_SequencePlayer.Tag=True
+AnimGraphNode_SequencePlayer.PoseMatching=True
+AnimationStateMachineGraph.Graph=True
+AnimMontage.BlendOption=True
+AnimMontage.Animation=True
+AnimMontage.SyncGroup=True
+AnimMontage.AdditiveSettings=True
+AnimMontage.TimeStretchCurve=True
+AnimMontage.AnimationComposite=True
+AnimMontage.Animation Model=True
+AnimMontage.MetaData=True
+AnimMontage.Thumbnail=True
+BP_Kronen_C.TransformCommon=True
+BP_Kronen_C.Animation=True
+BP_Kronen_C.Mesh=True
+BP_Kronen_C.Tick=True
+BP_Kronen_C.Default=True
+BP_Kronen_C.ComponentTick=True
+BP_Kronen_C.Clothing=True
+BP_Kronen_C.Physics=True
+BP_Kronen_C.LeaderPoseComponent=True
+BP_Kronen_C.Collision=True
+BP_Kronen_C.Lighting=True
+BP_Kronen_C.AnimationRig=True
+BP_Kronen_C.Deformer=True
+BP_Kronen_C.SkinWeights=True
+BP_Kronen_C.Rendering=True
+BP_Kronen_C.HLOD=True
+BP_Kronen_C.PathTracing=True
+BP_Kronen_C.Mobile=True
+BP_Kronen_C.Navigation=True
+BP_Kronen_C.RayTracing=True
+BP_Kronen_C.VirtualTexture=True
+BP_Kronen_C.Tags=True
+BP_Kronen_C.AssetUserData=True
+BP_Kronen_C.Replication=True
+BP_Kronen_C.ComponentReplication=True
+BP_Kronen_C.Activation=True
+BP_Kronen_C.Variable=True
+BP_Kronen_C.Cooking=True
+BP_Kronen_C.Character Movement (General Settings)=True
+BP_Kronen_C.Character Movement: Walking=True
+BP_Kronen_C.Character Movement: Jumping / Falling=True
+BP_Kronen_C.Character Movement: Gravity=True
+BP_Kronen_C.Character Movement (Networking)=True
+BP_Kronen_C.Character Movement: Swimming=True
+BP_Kronen_C.Character Movement: Flying=True
+BP_Kronen_C.Character Movement: Custom Movement=True
+BP_Kronen_C.Character Movement (Rotation Settings)=True
+BP_Kronen_C.Character Movement: Physics Interaction=True
+BP_Kronen_C.Character Movement=True
+BP_Kronen_C.Character Movement: Avoidance=True
+BP_Kronen_C.RootMotion=True
+BP_Kronen_C.Character Movement: NavMesh Movement=True
+BP_Kronen_C.NavMovement=True
+BP_Kronen_C.Velocity=True
+BP_Kronen_C.PlanarMovement=True
+BP_Kronen_C.MovementComponent=True
+BP_Kronen_C.Shape=True
+BP_Kronen_C.Character=True
+BP_Kronen_C.Camera=True
+BP_Kronen_C.Pawn=True
+BP_Kronen_C.Actor=True
+BP_Kronen_C.Input=True
+BP_Kronen_C.WorldPartition=True
+BP_Kronen_C.Events=True
+BP_Kronen_C.Materials=True
+NiagaraComponent.TransformCommon=True
+NiagaraComponent.Niagara=True
+NiagaraComponent.NiagaraComponent_Utilities=True
+NiagaraComponent.Activation=True
+NiagaraComponent.Lighting=True
+NiagaraComponent.Attachment=True
+NiagaraComponent.Randomness=True
+NiagaraComponent.Parameters=True
+NiagaraComponent.Warmup=True
+NiagaraComponent.Rendering=True
+NiagaraComponent.Compilation=True
+NiagaraComponent.HLOD=True
+NiagaraComponent.PathTracing=True
+NiagaraComponent.Navigation=True
+NiagaraComponent.Tags=True
+NiagaraComponent.ComponentReplication=True
+NiagaraComponent.Variable=True
+NiagaraComponent.Cooking=True
+CapsuleComponent.Variable=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Sockets=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.HLOD=True
+CapsuleComponent.ComponentTick=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.PathTracing=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Tags=True
+CapsuleComponent.ComponentReplication=True
+CapsuleComponent.Cooking=True
+CapsuleComponent.Events=True
+K2Node_VariableGet.Events=True
+woodBP_C.TransformCommon=True
+woodBP_C.Rendering=True
+woodBP_C.Replication=True
+woodBP_C.Collision=True
+woodBP_C.HLOD=True
+woodBP_C.Physics=True
+woodBP_C.Networking=True
+woodBP_C.Input=True
+woodBP_C.Actor=True
+Bp_Knive_C.AnimNotify=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.ComponentTick=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.HLOD=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.PathTracing=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Navigation=True
+StaticMeshComponent.VirtualTexture=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Cooking=True
+StaticMeshComponent.Events=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.ComponentTick=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -864,7 +1020,7 @@ ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
 ContentBrowserDrawer.SelectedPaths=/Game/_Core/_Enemies/Kronen_Male_001
-ContentBrowserDrawer.SelectedPaths=
+ContentBrowserDrawer.SelectedPaths=/Game
 None=======
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
@@ -2196,6 +2352,11 @@ None=======
 /Game/_Level/_LevelAssets/_Environment_Assets/flesh/flesh_2.flesh_2=1
 /Game/_Level/_LevelAssets/_OGFiles/skin_nasty_version2_M.skin_nasty_version2_M=1
 /Game/_Level/_LevelAssets/_OGFiles/skin_nasty_2_BaseColor.skin_nasty_2_BaseColor=1
+/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_BigGun_Shoot_Anim_Montage.Carpenter_BigGun_Shoot_Anim_Montage=1
+/Game/_Core/_Enemies/Kronen_Male_001/BP_Kronen.BP_Kronen=1
+/Game/_Core/_Player/_PlayerAnimations/_blendSpace/Carp_AnimBP.Carp_AnimBP=1
+/Game/_Level/_Blueprints/woodBP.woodBP=1
+/Game/_Core/_Player/_PlayerAnimations/_Notifires/Bp_Knive.Bp_Knive=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2310,7 +2471,7 @@ SkeletonEditingProperties=SkeletonEditingProperties.Details.Transform
 [DetailPropertyExpansion]
 RawInputSettings="\"Object.Device Configurations.DeviceConfigurations\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties.AxisProperties[7]\" "
 DeveloperSettings=
-Object=
+Object="\"Object.SkeletalMeshes\" "
 InputMappingContext="\"Object.Mappings.Mappings.Mappings[10]\" \"Object.Mappings.Mappings.Mappings[13]\" \"Object.Mappings.Mappings.Mappings[16]\" \"Object.Mappings.Mappings.Mappings[17]\" \"Object.Mappings.Mappings.Mappings[18]\" \"Object.Mappings.Mappings.Mappings[19]\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
@@ -2321,39 +2482,39 @@ ClothingAssetCommon="\"Object.Config.ClothConfigs\" \"Object.Config.ClothConfigs
 ClothingAssetBase="\"Object.Config.ClothConfigs\" \"Object.Config.ClothConfigs.ClothConfigs[1]\" \"Object.Config.ClothConfigs.ClothConfigs[1].Object.Simulation\" "
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_Level/_LevelAssets/_OGFiles/skin_nasty_version2_M
-MRUItem1=/Game/_Level/_LevelAssets/_OGFiles/skin_nasty_2_BaseColor
-MRUItem2=/Game/_Level/_LevelAssets/_Environment_Assets/flesh/flesh_2
-MRUItem3=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Shotgun_Shoot_Anim
-MRUItem4=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Shotgun_Shoot
-MRUItem5=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Shotgun_Aim_Anim
-MRUItem6=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Shotgun_Aim
-MRUItem7=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Shotgun_Idle_Anim
-MRUItem8=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Shotgun_Idle
-MRUItem9=/Game/_Core/_Player/_Assets/Carpenter_Char_Skeleton
-MRUItem10=/Game/_Core/_Weapons/AR_rifle/Weapon_Rifle_SkeletonWhack
-MRUItem11=/Game/_Core/_Player/_PlayerAnimations/_Animations/Axe/Carpenter_Axe_Slash_AnimWhack
-MRUItem12=/Game/_Core/_Player/_PlayerAnimations/_Animations/Axe/Carpenter_Axe_Idle_AnimWhack
-MRUItem13=/Game/_Core/_Weapons/AR_rifle/Weapon_Rifle
-MRUItem14=/Game/_Core/_Weapons/AR_rifle/Weapon_Rifle_Mag
-MRUItem15=/Game/_Core/_Player/_PlayerAnimations/_Animations/Axe/Carpenter_Axe_Slash_Anim
-MRUItem16=/Game/_Core/_Player/_PlayerAnimations/_Animations/Axe/Axe_Slash
-MRUItem17=/Game/_Core/_Player/_PlayerAnimations/_Animations/Axe/Carpenter_Axe_Idle_Anim
-MRUItem18=/Game/_Core/_Player/_PlayerAnimations/_Animations/Axe/Axe_Idle
-MRUItem19=/Game/_Core/_Player/_Assets/Carpenter_Char_SM
-MRUItem20=/Game/_Level/_LevelAssets/_Props/Cloth/Cloth_001
-MRUItem21=/Game/_Level/_LevelAssets/_Props/_Materials/Playground_2
-MRUItem22=/Game/_Level/_LevelAssets/_Props/_Outside/Playground_SM
-MRUItem23=/Game/_Level/_LevelAssets/_Props/Cloth/Cloth_001_Material
-MRUItem24=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_BigGun_Idle_Anim
-MRUItem25=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Pistol_Shoot_Anim
-MRUItem26=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Pistol_Shoot
-MRUItem27=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Pistol_Aim_Anim
-MRUItem28=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Pistol_Aim
-MRUItem29=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Pistol_Idle_Anim
+MRUItem0=/Game/_Core/_Player/_PlayerAnimations/_Notifires/Bp_Knive
+MRUItem1=/Game/_Level/_Blueprints/woodBP
+MRUItem2=/Game/_Core/_Player/_PlayerAnimations/_blendSpace/Carp_AnimBP
+MRUItem3=/Game/_Core/_Enemies/Kronen_Male_001/BP_Kronen
+MRUItem4=/Game/_Core/_Player/IF_Character
+MRUItem5=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_BigGun_Shoot_Anim_Montage
+MRUItem6=/Game/_Core/_Player/_PlayerAnimations/_blendSpace/Capr_BS
+MRUItem7=/Game/_Level/_LevelAssets/_OGFiles/skin_nasty_version2_M
+MRUItem8=/Game/_Level/_LevelAssets/_OGFiles/skin_nasty_2_BaseColor
+MRUItem9=/Game/_Level/_LevelAssets/_Environment_Assets/flesh/flesh_2
+MRUItem10=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Shotgun_Shoot_Anim
+MRUItem11=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Shotgun_Shoot
+MRUItem12=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Shotgun_Aim_Anim
+MRUItem13=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Shotgun_Aim
+MRUItem14=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Shotgun_Idle_Anim
+MRUItem15=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Shotgun_Idle
+MRUItem16=/Game/_Core/_Player/_Assets/Carpenter_Char_Skeleton
+MRUItem17=/Game/_Core/_Weapons/AR_rifle/Weapon_Rifle_SkeletonWhack
+MRUItem18=/Game/_Core/_Player/_PlayerAnimations/_Animations/Axe/Carpenter_Axe_Slash_AnimWhack
+MRUItem19=/Game/_Core/_Player/_PlayerAnimations/_Animations/Axe/Carpenter_Axe_Idle_AnimWhack
+MRUItem20=/Game/_Core/_Weapons/AR_rifle/Weapon_Rifle
+MRUItem21=/Game/_Core/_Weapons/AR_rifle/Weapon_Rifle_Mag
+MRUItem22=/Game/_Core/_Player/_PlayerAnimations/_Animations/Axe/Carpenter_Axe_Slash_Anim
+MRUItem23=/Game/_Core/_Player/_PlayerAnimations/_Animations/Axe/Axe_Slash
+MRUItem24=/Game/_Core/_Player/_PlayerAnimations/_Animations/Axe/Carpenter_Axe_Idle_Anim
+MRUItem25=/Game/_Core/_Player/_PlayerAnimations/_Animations/Axe/Axe_Idle
+MRUItem26=/Game/_Core/_Player/_Assets/Carpenter_Char_SM
+MRUItem27=/Game/_Level/_LevelAssets/_Props/Cloth/Cloth_001
+MRUItem28=/Game/_Level/_LevelAssets/_Props/_Materials/Playground_2
+MRUItem29=/Game/_Level/_LevelAssets/_Props/_Outside/Playground_SM
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=PIE
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
@@ -2362,6 +2523,8 @@ Contexts=(Name="SkeletonEditor.Viewport0",Commands=)
 Contexts=(Name="SkeletonEditor",Commands=)
 Contexts=(Name="SkeletalMeshEditor.Viewport0",Commands=)
 Contexts=(Name="SkeletalMeshEditor",Commands=)
+Contexts=(Name="AnimationBlueprintEditor",Commands=)
+Contexts=(Name="AnimationBlueprintEditor.Viewport0",Commands=)
 
 [FEditorModeTools]
 CoordSystem=1
@@ -2752,4 +2915,7 @@ bMaterialQualityUsed[0]=0
 bMaterialQualityUsed[1]=1
 bMaterialQualityUsed[2]=0
 bMaterialQualityUsed[3]=0
+
+[/Script/UnrealEd.AnimationBlueprintEditorOptions]
+bHideUnrelatedNodes=False
 
